--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -18,5 +18,39 @@
                 height: 100%;
             }
         }
+        .nav{
+            height: 100%;
+            display: flex;
+            align-items: center;
+            .listItem{
+                position: relative;
+                height: 100%;
+                margin-left: 25px;
+                display: flex;
+                align-items: center;
+                white-space: nowrap;
+                .linkPage{
+                    color: #fff;
+                    font-size: .8rem;
+                    font-weight: 500;
+                    text-transform: uppercase;
+                }
+            }
+            .currentPage{
+                :before{
+                    position: absolute;
+                    bottom: 0;
+                    left: 0;
+                    content: "";
+                    width: 100%;
+                    height: 5px;
+                    background: #0282F9;
+                }
+                .linkPage{
+                    color: #0282F9;
+                    font-weight: 700;
+                }
+            }
+        }
     }
 }
