--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,7 +1,7 @@
 .header{
     width: 100%;
     height: 118px;
-    background: red;
+    background: #fff;
     .inner_header{
         width: 80%;
         margin: 0 auto;
@@ -30,8 +30,8 @@
                 align-items: center;
                 white-space: nowrap;
                 .linkPage{
-                    color: #fff;
-                    font-size: .8rem;
+                    color: #1C1C1C;
+                    font-size: .9rem;
                     font-weight: 500;
                     text-transform: uppercase;
                 }
