--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -1,4 +1,8 @@
 .header{
+    position: fixed;
+    z-index: 999;
+    top: 0;
+    left: 0;
     width: 100%;
     height: 118px;
     background: #fff;
