--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -105,4 +105,59 @@
         width: 80%;
         margin: 0 auto;
     }
+};
+
+.footer{
+    position: relative;
+    z-index: 900;
+    padding: 40px 0;
+    background: #1C1C1C;
+    background-image: url("/imgs/footer-bg.jpg");
+    background-position: center right;
+    background-repeat: no-repeat;
+    background-size: cover;
+    width: 100%;
+    .inner_footer{
+        width: 80%;
+        margin: 0 auto;
+        .logo_bg{
+            position: absolute;
+            top: 0;
+            right: 10%;
+            background-image: url("/imgs/dc-logo-bg.png");
+            background-position: center right;
+            background-repeat: no-repeat;
+            background-size: 35%;
+            width: 100%;
+            height: 100%;
+        }
+        .links_footer_row_container{
+            width: 100%;
+            display: flex;
+            .row_links_footer{
+                margin-right: 2em;
+                .up_footer_links{
+                    margin-bottom: 1em;
+                }
+                .headingLink_footer{
+                    color: #fff;
+                    font-size: 1.5rem;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                    margin-bottom: 10px;
+                }
+                .bodyLink_footer{
+                    a {
+                        color: grey;
+                        font-size: .9rem;
+                        font-weight: 400;
+                        white-space: nowrap;
+                        &:hover{
+                            text-decoration: underline;
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
