--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -160,4 +160,47 @@
             }
         }
     }
+};
+
+.follow_container{
+    position: relative;
+    z-index: 900;
+    padding: 40px 0;
+    width: 100%;
+    background: #303030;
+    .inner_follow{
+        width: 80%;
+        margin: 0 auto;
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        .btn{
+            background: transparent;
+            border: 2px solid #0282F9;
+            text-align: center;
+            padding: 10px 20px;
+            color: #fff;
+            font-size: 1rem;
+            font-weight: 500;
+            text-transform: uppercase;
+        }
+        .social_follow_container{
+            display: flex;
+            align-items: center;
+            .title{
+                color: #0282F9;
+                font-size: 1.3rem;
+                font-weight: 700;
+                text-transform: uppercase;
+                margin-right: .5em;
+            }
+            .link_social{
+                display: flex;
+                align-items: center;
+                .socialBox{
+                    margin-left: 1em;
+                }
+            }
+        }
+    }
 }
