--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -6,6 +6,7 @@
     width: 100%;
     height: 118px;
     background: #fff;
+
     @media only screen and (max-width: 1230px) {
         height: 60px;
     }
@@ -22,6 +23,7 @@
             width: 80px;
             height: auto;
             cursor: pointer;
+
             @media only screen and (max-width: 1230px) {
                 width: 40px;
             }
@@ -74,13 +76,15 @@
                 }
             }
         }
-        .box_func_hamburger{
+
+        .box_func_hamburger {
             display: none;
 
             @media only screen and (max-width: 1230px) {
                 display: flex;
             }
-            .btn_trigger_hamburger{
+
+            .btn_trigger_hamburger {
                 width: 40px;
                 height: 40px;
                 background: transparent;
@@ -88,15 +92,18 @@
                 outline: none;
                 border-radius: 50%;
                 cursor: pointer;
-                .fa-solid{
+
+                .fa-solid {
                     color: #1C1C1C;
                     font-size: 1.2rem;
+
                     &:hover {
                         color: #0282F9
                     }
                 }
             }
-            .hamburger_menu{
+
+            .hamburger_menu {
                 position: absolute;
                 top: 60px;
                 left: 0;
@@ -104,21 +111,26 @@
                 background: #fff;
                 border-top: 1px solid grey;
                 padding: 15px 0;
-                .list_nav_mobile{
+
+                .list_nav_mobile {
                     width: 80%;
                     margin: 0 auto;
-                    .list_mobile{
+
+                    .list_mobile {
                         margin-bottom: 10px;
-                        &:last-child{
+
+                        &:last-child {
                             margin-bottom: 0;
                         }
-                        .linkPage{
+
+                        .linkPage {
                             color: #1C1C1C;
                             font-size: 0.9rem;
                             font-weight: 500;
                             text-transform: uppercase;
                         }
-                        .mobile_page_active{
+
+                        .mobile_page_active {
                             color: #0282F9;
                             font-weight: 700;
                         }
@@ -137,6 +149,7 @@
     margin-top: 118px;
     top: 0;
     width: 100%;
+
     @media only screen and (max-width: 1230px) {
         margin-top: 60px;
     }
@@ -163,6 +176,14 @@
             gap: 1em;
             align-items: center;
 
+            @media only screen and (max-width: 1230px) {
+                grid-template-columns: repeat(3, 1fr);
+            }
+
+            @media only screen and (max-width: 720px) {
+                grid-template-columns: repeat(2, 1fr);
+            }
+
             .row_card {
                 a {
                     display: flex;
@@ -170,6 +191,14 @@
 
                     .imgText {
                         width: 60px;
+
+                        @media only screen and (max-width: 1230px) {
+                            width: 50px;
+                        }
+
+                        @media only screen and (max-width: 720px) {
+                            width: 40px;
+                        }
                     }
 
                     .cardText {
@@ -222,9 +251,16 @@
         .links_footer_row_container {
             width: 100%;
             display: flex;
+            @media only screen and (max-width: 720px) {
+                display: block;
+            }
 
             .row_links_footer {
                 margin-right: 2em;
+                @media only screen and (max-width: 720px) {
+                    margin-right: 0;
+                    margin-bottom: 2em;
+                }
 
                 .up_footer_links {
                     margin-bottom: 1em;
