--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -246,6 +246,9 @@
             background-size: 35%;
             width: 100%;
             height: 100%;
+            @media only screen and (max-width: 720px) {
+                background-size: 60%;
+            }
         }
 
         .links_footer_row_container {
@@ -287,6 +290,12 @@
                     }
                 }
             }
+            #row_footer_one{
+                @media only screen and (max-width: 720px) {
+                    display: flex;
+                    justify-content: space-between;
+                }
+            }
         }
     }
 }
@@ -306,21 +315,32 @@
         display: flex;
         align-items: center;
         justify-content: space-between;
+        @media only screen and (max-width: 720px) {
+            display: block;
+        }
 
         .btn {
             background: transparent;
             border: 2px solid #0282F9;
+            border-radius: 30px;
             text-align: center;
             padding: 10px 20px;
             color: #fff;
             font-size: 1rem;
             font-weight: 500;
             text-transform: uppercase;
+            transition: all 200ms ease;
+            &:hover{
+                background: #0282F9;
+            }
         }
 
         .social_follow_container {
             display: flex;
             align-items: center;
+            @media only screen and (max-width: 720px) {
+                margin-top: 3em;
+            }
 
             .title {
                 color: #0282F9;
@@ -328,6 +348,9 @@
                 font-weight: 700;
                 text-transform: uppercase;
                 margin-right: .5em;
+                @media only screen and (max-width: 720px) {
+                    font-size: 1rem;
+                }
             }
 
             .link_social {
