--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -56,6 +56,10 @@
                     font-size: .9rem;
                     font-weight: 500;
                     text-transform: uppercase;
+                    transition: color 200ms ease;
+                    &:hover{
+                        color: #0282F9;
+                    }
                 }
             }
 
@@ -73,6 +77,7 @@
                 .linkPage {
                     color: #0282F9;
                     font-weight: 700;
+                    cursor: default;
                 }
             }
         }
@@ -128,11 +133,16 @@
                             font-size: 0.9rem;
                             font-weight: 500;
                             text-transform: uppercase;
+                            transition: color 200ms ease;
+                            &:hover{
+                                color: #0282F9;
+                            }
                         }
 
                         .mobile_page_active {
                             color: #0282F9;
                             font-weight: 700;
+                            cursor: default;
                         }
                     }
                 }
