--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -149,9 +149,7 @@
             }
         }
     }
-}
-
-;
+};
 
 .mainView {
     position: relative;
@@ -164,14 +162,28 @@
         margin-top: 60px;
     }
 
+    .container__hero{
+        width: 100%;
+        .hero_img{
+            width: 100%;
+            object-fit: cover;
+            aspect-ratio: 16 / 6;
+        }
+    }
+
     .container__content {
         padding: 60px 0;
         background: #1C1C1C;
-
-        .content_place {
-            color: #fff;
-            font-size: 1.5rem;
-            font-weight: 600;
+        .container_heading{
+            background: #0282F9;
+            padding: 8px 20px;
+            display: inline-block;
+            .heading_content {
+                color: #fff;
+                font-size: 1.5rem;
+                font-weight: 600;
+                text-transform: uppercase;
+            }
         }
     }
 
@@ -248,6 +260,7 @@
 
         .logo_bg {
             position: absolute;
+            z-index: 1;
             top: 0;
             right: 10%;
             background-image: url("/imgs/dc-logo-bg.png");
@@ -262,6 +275,8 @@
         }
 
         .links_footer_row_container {
+            position: relative;
+            z-index: 5;
             width: 100%;
             display: flex;
             @media only screen and (max-width: 720px) {
