--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -191,6 +191,39 @@
         }
     }
 
+    .container_series{
+        position: relative;
+        z-index: 2;
+        width: 100%;
+        display: grid;
+        column-gap: 1em;
+        grid-row-gap: 3em;
+        grid-template-columns: repeat(6, 1fr);
+        .cardSeries{
+            width: 100%;
+            .imgWrap{
+                width: 100%;
+                height: auto;
+                .img_series{
+                    width: 100%;
+                    height: 100%;
+                    aspect-ratio: 1;
+                    object-fit: cover;
+                }
+            }
+            .infoWrap{
+                width: 100%;
+                margin-top: .4em;
+                .title_series{
+                    color: #fff;
+                    font-size: 1rem;
+                    font-weight: 600;
+                    text-transform: uppercase;
+                }
+            }
+        }
+    }
+
     .container__banner {
         padding: 60px 0;
         background: #0282F9;
