--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -211,6 +211,10 @@
             .imgWrap{
                 width: 100%;
                 height: auto;
+                transition: transform 300ms ease 50ms;
+                &:hover {
+                    transform: scale(1.1);
+                }
                 .img_series{
                     width: 100%;
                     height: 100%;
@@ -227,6 +231,35 @@
                     font-weight: 600;
                     text-transform: uppercase;
                 }
+            }
+        }
+    }
+
+    .container_cta{
+        position: relative;
+        width: 100%;
+        margin-top: 30px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        .btn_load_more{
+            background: transparent;
+            border: 2px solid #0282F9;
+            text-align: center;
+            padding: 10px 20px;
+            color: #fff;
+            font-size: 1rem;
+            font-weight: 600;
+            text-transform: uppercase;
+            transition: all 200ms ease;
+            cursor: pointer;
+        }
+        .inverted_btn{
+            background: #0282F9;
+            color: #fff;
+            &:hover{
+                border: 2px solid #005fb7;
+                background: #005fb7;
             }
         }
     }
@@ -391,12 +424,11 @@
         .btn {
             background: transparent;
             border: 2px solid #0282F9;
-            border-radius: 30px;
             text-align: center;
             padding: 10px 20px;
             color: #fff;
             font-size: 1rem;
-            font-weight: 500;
+            font-weight: 600;
             text-transform: uppercase;
             transition: all 200ms ease;
             &:hover{
