--- a/src/style/main.scss
+++ b/src/style/main.scss
@@ -195,6 +195,7 @@
         position: relative;
         z-index: 2;
         width: 100%;
+        padding: 0 1em;
         display: grid;
         column-gap: 1em;
         grid-row-gap: 3em;
@@ -270,6 +271,7 @@
 
         .row_container {
             width: 100%;
+            padding: 0 1em;
             display: grid;
             grid-template-columns: repeat(5, 1fr);
             gap: 1em;
